Bug 543339 - jaxb-compiler.(cmd|sh) script error in Java 9 and higher
Initial commit. It's not fully functional.

Signed-off-by: Radek Felcman <radek.felcman@oracle.com>