@@ -25,14 +25,46 @@ set JVM_ARGS=-Xmx256m
 set _FIXPATH=
 call :fixpath "%~dp0"
 set THIS=%_FIXPATH:~1%
-set CLASSPATH=%THIS%..\jlib\moxy\jakarta.json.jar
-set CLASSPATH=%CLASSPATH%;%THIS%..\jlib\moxy\jaxb-osgi.jar
-set CLASSPATH=%CLASSPATH%;%THIS%..\jlib\moxy\jakarta.validation-api.jar
-set CLASSPATH=%CLASSPATH%;%THIS%..\jlib\eclipselink.jar
+set EL_PATH=%THIS%..\jlib\moxy\jakarta.json.jar
+set EL_PATH=%EL_PATH%;%THIS%..\jlib\moxy\jaxb-osgi.jar
+set EL_PATH=%EL_PATH%;%THIS%..\jlib\moxy\jakarta.validation-api.jar
+set EL_PATH=%EL_PATH%;%THIS%..\jlib\eclipselink.jar
+set JAXB_API_PATH=%THIS%..\jlib\moxy\api\jakarta.xml.bind-api.jar
+set MAIN_CLASS=org.eclipse.persistence.jaxb.xjc.MOXyXJC
 set JAVA_ARGS=%*
 
-%JAVA_HOME%\bin\java.exe %JVM_ARGS% -cp %CLASSPATH% -Djava.endorsed.dirs=..\jlib\moxy\api org.eclipse.persistence.jaxb.xjc.MOXyXJC %JAVA_ARGS%
+rem Set Java Version
+for /f "tokens=3" %%i in ('java -version 2^>^&1 ^| %SystemRoot%\system32\find.exe "version"') do (
+  set JAVA_VERSION1=%%i
+)
+for /f "tokens=1,2 delims=." %%j in ('echo %JAVA_VERSION1:~1,-1%') do (
+  if "1" EQU "%%j" (
+    set JAVA_VERSION2=%%k
+  ) else (
+    set JAVA_VERSION2=%%j
+  )
+)
 
+rem Remove -ea
+for /f "delims=-" %%i in ('echo %JAVA_VERSION2%') do set JAVA_VERSION=%%i
+echo Java major version: %JAVA_VERSION%
+
+if %JAVA_VERSION% GEQ 9 goto JDK9_OR_GREATER
+rem classpath (Java 8)
+%JAVA_HOME%\bin\java.exe %JVM_ARGS% -cp %EL_PATH% -Djava.endorsed.dirs=..\jlib\moxy\api %MAIN_CLASS% %JAVA_ARGS%
+@endlocal
+goto :EOF
+
+:JDK9_OR_GREATER
+if %JAVA_VERSION% GTR 10 goto JDK11_OR_GREATER
+rem module path + upgrade (Java 9,10)
+%JAVA_HOME%\bin\java.exe %JVM_ARGS% -cp %EL_PATH% --add-modules java.activation --upgrade-module-path %JAXB_API_PATH% %MAIN_CLASS% %JAVA_ARGS%
+@endlocal
+goto :EOF
+
+:JDK11_OR_GREATER
+rem module path (Java 11)
+%JAVA_HOME%\bin\java.exe %JVM_ARGS% -cp %EL_PATH% --module-path %JAXB_API_PATH% %MAIN_CLASS% %JAVA_ARGS%
 @endlocal
 goto :EOF
 
